# from_scratch

./: README.md  main.py  pyproject.toml
gpt2/: build.ipynb
