[project]
name = "from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "torch>=2.5.1,<2.7.1",
    "transformers>=4.53.2",
]

[project.optional-dependencies]
gpu = ["torch>=2.5.1,<2.7.1", "setuptools>=75.8.0", "packaging"]
cpu = ["torch>=2.5.1,<2.7.1"]
flash = ["flash-attn>=2.7.4"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra="cpu" },
  { index = "pytorch-gpu", extra="gpu" },
]

[tool.uv]
package = true
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

